# openoms

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: architecture-notes.md  next-steps.md  openoms-playground-live.html  openoms-playground.html  product-thesis.md  v0.1-plan.md
openoms/: __init__.py  api_server.py  benchmark.py  demo.py  policy.py  server.py  service.py
openoms/kernel/: __init__.py  greedy.py  promise.py  relaxer.py  scorer.py  solver.py
openoms/models/: __init__.py  domain.py  events.py
openoms/seed/: generate_small_dataset.py  hearthline.py
openoms/store/: memory.py  postgres.py
policies/: default.yaml
sql/: init.sql
tests/: test_agent_features.py  test_greedy.py  test_service.py
